--- a/app/src/main/res/layout/activity_menu_registros.xml
+++ b/app/src/main/res/layout/activity_menu_registros.xml
@@ -32,7 +32,7 @@
                 android:layout_height="70sp"
                 android:layout_margin="10dp"
                 android:background="@drawable/redondo"
-                android:backgroundTint="#000000"
+                android:backgroundTint="@drawable/btn_background_negro"
                 android:drawableLeft="@drawable/ic_moto"
                 android:padding="27sp"
                 android:gravity="left"
@@ -45,7 +45,7 @@
                 android:layout_height="70sp"
                 android:layout_margin="10dp"
                 android:background="@drawable/redondo"
-                android:backgroundTint="#000000"
+                android:backgroundTint="@drawable/btn_background_negro"
                 android:drawableLeft="@drawable/ic_store"
                 android:padding="27sp"
                 android:gravity="left"
@@ -58,7 +58,7 @@
                 android:layout_height="70sp"
                 android:layout_margin="10dp"
                 android:background="@drawable/redondo"
-                android:backgroundTint="#000000"
+                android:backgroundTint="@drawable/btn_background_negro"
                 android:drawableLeft="@drawable/ic_admin"
                 android:padding="27sp"
                 android:gravity="left"
