--- a/app/src/main/res/layout/activity_detalle_pedido.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido.xml
@@ -104,9 +104,9 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/futura"
                 android:onClick="showPopupEstado"
-                android:background="@drawable/notanredondo"
+                android:background="@drawable/redondo"
                 android:textColor="#fff"
-                android:backgroundTint="#1E1E1E"
+                android:backgroundTint="@drawable/btn_background_estadopedidoadmin"
                 android:layout_gravity="top|right"
                 android:layout_height="wrap_content"/>
 
@@ -445,7 +445,7 @@
                                     android:layout_width="wrap_content"
                                     android:textColor="#FF0000"
                                     android:layout_marginTop="15dp"
-                                    android:onClick="onClickLlamada"
+                                    android:onClick="onClickLlamadaCliente"
                                     android:layout_marginLeft="5dp"
                                     android:textStyle="bold"
                                     android:fontFamily="@font/futura"
@@ -828,7 +828,7 @@
                                     android:layout_width="wrap_content"
                                     android:text="Detalles\ndel producto"
                                     android:background="@drawable/redondo"
-                                    android:backgroundTint="#000"
+                                    android:backgroundTint="@drawable/btn_background_negro"
                                     android:id="@+id/showProducto"
                                     android:gravity="center"
                                     android:layout_weight="1"
@@ -842,7 +842,7 @@
                                     android:text="Mapa\ndel cliente"
                                     android:layout_weight="1"
                                     android:background="@drawable/redondo"
-                                    android:backgroundTint="#000"
+                                    android:backgroundTint="@drawable/btn_background_negro"
                                     android:id="@+id/showMapa"
                                     android:textStyle="bold"
                                     android:fontFamily="@font/futura"
@@ -860,7 +860,7 @@
                                         android:text="Editar\npedido"
                                         android:layout_weight="1"
                                         android:background="@drawable/redondo"
-                                        android:backgroundTint="#000"
+                                        android:backgroundTint="@drawable/btn_background_negro"
                                         android:textStyle="bold"
                                         android:fontFamily="@font/futura"
                                         android:id="@+id/showEditarPedido"
@@ -880,7 +880,7 @@
                                     android:text="Asignar nuevo Repartidor"
                                     android:layout_weight="1"
                                     android:background="@drawable/redondo"
-                                    android:backgroundTint="#000"
+                                    android:backgroundTint="@drawable/btn_background_negro"
                                     android:textStyle="bold"
                                     android:fontFamily="@font/futura"
                                     android:id="@+id/showAsignarRrepartidor"
@@ -1265,7 +1265,7 @@
                     android:layout_width="wrap_content"
                     android:text="Detalles del pedido"
                     android:background="@drawable/redondo"
-                    android:backgroundTint="#000"
+                    android:backgroundTint="@drawable/btn_background_negro"
                     android:id="@+id/showDetalle"
                     android:textColor="#fff"
                     android:layout_weight="1"
