--- a/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
@@ -112,7 +112,7 @@
                     android:textColor="#fff"
                     android:fontFamily="@font/futura"
                     android:textStyle="bold"
-                    android:backgroundTint="#239B56"
+                    android:backgroundTint="@drawable/btn_background_estadopedidoaukdeliver"
                     android:layout_height="wrap_content"/>
 
                 <Button
@@ -127,7 +127,7 @@
                     android:fontFamily="@font/futura"
                     android:textStyle="bold"
                     android:textSize="12sp"
-                    android:backgroundTint="#000000"
+                    android:backgroundTint="@drawable/btn_background_estadopedidoadmin"
                     android:layout_height="wrap_content"/>
 
             </RelativeLayout>
@@ -734,7 +734,7 @@
                                     android:layout_width="wrap_content"
                                     android:text="Detalles\ndel producto"
                                     android:background="@drawable/redondo"
-                                    android:backgroundTint="#000"
+                                    android:backgroundTint="@drawable/btn_background_verde"
                                     android:id="@+id/showProducto"
                                     android:gravity="center"
                                     android:fontFamily="@font/futura"
@@ -748,7 +748,7 @@
                                     android:text="Mapa\ndel cliente"
                                     android:layout_weight="1"
                                     android:background="@drawable/redondo"
-                                    android:backgroundTint="#000"
+                                    android:backgroundTint="@drawable/btn_background_verde"
                                     android:id="@+id/showMapa"
                                     android:fontFamily="@font/futura"
                                     android:textStyle="bold"
@@ -1083,7 +1083,7 @@
                     android:layout_width="wrap_content"
                     android:text="Detalles del pedido"
                     android:background="@drawable/redondo"
-                    android:backgroundTint="#000"
+                    android:backgroundTint="@drawable/btn_background_verde"
                     android:id="@+id/showDetalle"
                     android:textColor="#fff"
                     android:layout_weight="1"
