--- a/app/src/main/res/layout/activity_asignar_repartidor.xml
+++ b/app/src/main/res/layout/activity_asignar_repartidor.xml
@@ -153,6 +153,7 @@
 
             <Spinner
                 android:id="@+id/spinnerAukdeliver"
+                android:spinnerMode="dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
           </LinearLayout>
