--- a/app/src/main/res/layout/activity_registro_proveedor.xml
+++ b/app/src/main/res/layout/activity_registro_proveedor.xml
@@ -220,6 +220,8 @@
                     android:text="Mapear"
                     android:id="@+id/btnMapear"
                     android:padding="10dp"
+                    android:background="@drawable/redondo"
+                    android:backgroundTint="@drawable/btn_background_negro"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -430,7 +432,7 @@
                     android:textColor="#ffffff"
                     android:background="@drawable/redondo"
                     android:id="@+id/btnRegistrarse"
-                    android:backgroundTint="#000000"/>
+                    android:backgroundTint="@drawable/btn_background_negro"/>
 
             </LinearLayout>
         </LinearLayout>
