--- a/app/src/main/res/layout/activity_asignar_repartidor.xml
+++ b/app/src/main/res/layout/activity_asignar_repartidor.xml
@@ -943,9 +943,41 @@
                     android:textColor="#000000"
                     android:layout_marginRight="10dp"
                     android:layout_height="wrap_content"/>
-
               </LinearLayout>
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_height="wrap_content">
+
+              <ImageView
+                  android:layout_width="20dp"
+                  android:src="@drawable/referencia"
+                  android:layout_height="40dp"/>
+
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:textSize="14sp"
+                  android:text="Referencia :"
+                  android:textStyle="bold"
+                  android:fontFamily="@font/futura"
+                  android:textColor="#000000"
+                  android:layout_marginLeft="5dp"
+                  android:layout_height="wrap_content"/>
+
+              <EditText
+                  android:id="@+id/referenciaCliente"
+                  android:layout_width="match_parent"
+                  android:hint="Al costado de aukde"
+                  android:gravity="center"
+                  android:textColor="#000"
+                  android:fontFamily="@font/futura"
+                  android:textSize="14sp"
+                  android:textStyle="bold"
+                  android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <!-- Linea de separación -->
