--- a/app/src/main/res/layout/activity_detalle_pedido.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido.xml
@@ -648,6 +648,41 @@
                                 android:layout_width="match_parent"
                                 android:orientation="horizontal"
                                 android:layout_marginTop="6dp"
+                                android:id="@+id/linearReferencia"
+                                android:layout_height="wrap_content">
+                                <ImageView
+                                    android:layout_width="40dp"
+                                    android:src="@drawable/referencia"
+                                    android:layout_height="40dp"/>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:text="Referencia : "
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:layout_marginTop="15dp"
+                                    android:fontFamily="@font/futura"
+                                    android:textColor="#000"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_height="wrap_content"/>
+
+                                <TextView
+                                    android:id="@+id/detalleReferencia"
+                                    android:layout_width="wrap_content"
+                                    android:textColor="#000"
+                                    android:textSize="16sp"
+                                    android:layout_marginLeft="5dp"
+                                    android:layout_marginTop="15dp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/futura"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="6dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
