--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -162,7 +162,7 @@
                         <Button
                             android:layout_width="50dp"
                             android:gravity="center"
-                            android:id="@+id/btnListaPedidosAukdeliver"
+                            android:id="@+id/btnListaProductos"
                             android:background="@drawable/btn_productos"
                             android:layout_height="80dp"/>
 
