--- a/app/src/main/res/layout/activity_agregar_producto_por_defecto.xml
+++ b/app/src/main/res/layout/activity_agregar_producto_por_defecto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".paquetes.Productos.AgregarProductoPorDefecto">
+    tools:context=".paquetes.Productos.Default.AgregarProductoPorDefecto">
 
     <include layout="@layout/toolbar3"/>
 
